# Optimist

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Rakefile  TODO.md
.github/workflows/: run_cmake_inclusion_tests.yml  run_cpp_tests.yml
cmake/: OptimistCatch2.cmake  OptimistConfig.cmake.in  OptimistEigen3.cmake  OptimistGTest.cmake  OptimistMatplot.cmake  OptimistRoot.cmake  OptimistVersion.cmake
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
core/include/: Optimist.hh
core/include/Optimist/: FiniteDifferences.hh  Function.hh  Optimizer.hh  RootFinder.hh  SolverBase.hh  TestSet.hh
core/include/Optimist/Optimizer/: ConjugateGradient.hh  NelderMead.hh  ParticleSwarm.hh  PatternSearch.hh
core/include/Optimist/RootFinder/: Algo748.hh  Bracketing.hh  Broyden.hh  Chandrupatla.hh  Chebyshev.hh  Greenstadt.hh  Halley.hh  Newton.hh  NewtonRaphson.hh  QuasiNewton.hh  Varona.hh
core/include/Optimist/TestSet/: Booth.hh  Brown.hh  Cos.hh  Cosh.hh  EllipticParaboloid.hh  Linear.hh  Quadratic.hh  Rosenbrock.hh  Schaffer2.hh  Sin.hh  Sinh.hh
core/tests/: CMakeLists.txt
core/tests/FiniteDifferences/: test_finite_differences.cc
core/tests/Optimizer/: test_conjugategradient.cc  test_cost_functions.hh  test_neldermead.cc  test_newtonraphson.cc
core/tests/RootFinder/: test_algo748.cc  test_broyden.cc  test_chandrupatla.cc  test_chebyshev.cc  test_greenstadt.cc  test_halley.cc  test_newton.cc  test_newtonraphson.cc  test_varona.cc
core/tests/TestSet/: test_testset.cc
docs/: _algo748_8hh.html  _algo748_8hh.js  _algo748_8hh__incl.map  _algo748_8hh__incl.md5  _algo748_8hh_source.html  _algo748_8hxx.html  _algo748_8hxx.js  _algo748_8hxx__dep__incl.map  _algo748_8hxx__dep__incl.md5  _algo748_8hxx_source.html  _booth_8hh.html  _booth_8hh.js  _booth_8hh__dep__incl.map  _booth_8hh__dep__incl.md5  _booth_8hh__incl.map  _booth_8hh__incl.md5  _booth_8hh_source.html  _booth_8hxx.html  _booth_8hxx.js  _booth_8hxx__dep__incl.map  _booth_8hxx__dep__incl.md5  _booth_8hxx_source.html  _bracketing_8hh.html  _bracketing_8hh.js  _bracketing_8hh__dep__incl.map  _bracketing_8hh__dep__incl.md5  _bracketing_8hh__incl.map  _bracketing_8hh__incl.md5  _bracketing_8hh_source.html  _bracketing_8hxx.html  _bracketing_8hxx.js  _bracketing_8hxx__dep__incl.map  _bracketing_8hxx__dep__incl.md5  _bracketing_8hxx_source.html  _brown_8hh.html  _brown_8hh.js  _brown_8hh__dep__incl.map  _brown_8hh__dep__incl.md5  _brown_8hh__incl.map  _brown_8hh__incl.md5  (+912 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Broyden.md  Function.md  Greenstadt.md  Mainpage.md  NonlinearSolver.md  Optimizer.md  RootFinder.md  ScalarOptimizer.md  ScalarRootFinder.md  ScalarSolver.md  Solver.md  SolverBase.md
docs/markdown/Optimizer/: ConjugateGradient.md
docs/markdown/RootFinder/: Broyden.md  Greenstadt.md  Newton.md  NewtonRaphson.md  QuasiNewton.md
docs/markdown/ScalarRootFinder/: Newton.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+82 more)
include/: Optimist.hh
include/Optimist/: Factory.hxx  FiniteDifference.hh  FiniteDifference.hxx  FiniteDifferences.hh  Function.hh  Function.hxx  Optimizer.hh  Optimizer.hxx  RootFinder.hh  RootFinder.hxx  ScalarOptimizer.hh  ScalarOptimizer.hxx  ScalarRootFinder.hh  ScalarRootFinder.hxx  ScalarSolver.hxx  Solver.hh  Solver.hxx  SolverBase.hh  TestSet.hh  TicToc.hxx
include/Optimist/Function/: CostFunction.hh  CostFunction.hxx  CutFunction.hxx  ScalarFunction.hh  ScalarFunction.hxx  VectorFunction.hh  VectorFunction.hxx
include/Optimist/NonlinearSolver/: Broyden.hxx  Newton.hxx  NonlinearSolver.hxx
include/Optimist/Optimizer/: NelderMead.hh  NelderMead.hxx  ParticleSwarm.hh  PatternSearch.hh  PatternSearch.hxx  Spendley.hxx
include/Optimist/RootFinder/: Algo748.hh  Bracketing.hh  Broyden.hh  Broyden.hxx  Chandrupatla.hh  Chebyshev.hh  Greenstadt.hh  Greenstadt.hxx  Halley.hh  Newton.hh  Newton.hxx  NewtonRaphson.hh  QuasiNewton.hh  QuasiNewton.hxx  Varona.hh
include/Optimist/ScalarRootFinder/: Algo748.hh  Algo748.hxx  Bracketing.hh  Bracketing.hxx  Chandrupatla.hh  Chandrupatla.hxx  Chebyshev.hh  Chebyshev.hxx  Halley.hh  Halley.hxx  Newton.hh  Newton.hxx  Varona.hh  Varona.hxx
include/Optimist/ScalarSolver/: Newton.hxx
include/Optimist/TestSet/: Booth.hh  Brown.hh  Cos.hh  Cosh.hh  EllipticParaboloid.hh  Linear.hh  Quadratic.hh  Rosenbrock.hh  Schaffer2.hh  Sin.hh  Sinh.hh  Test11.hh
include/Optimist/TestSet/CostFunction/: EllipticParaboloid.hh  EllipticParaboloid.hxx  Schaffer2.hh  Schaffer2.hxx
include/Optimist/TestSet/ScalarFunction/: Cos.hh  Cos.hxx  Cosh.hh  Cosh.hxx  Linear.hh  Linear.hxx  Quadratic.hh  Quadratic.hxx  Sin.hh  Sin.hxx  Sinh.hh  Sinh.hxx
include/Optimist/TestSet/VectorFunction/: Booth.hh  Booth.hxx  Brown.hh  Brown.hxx  Rosenbrock.hh  Rosenbrock.hxx  Rosenbrock2.hxx
tests/: CMakeLists.txt
tests/Broyden/: test_broyden.cc
tests/FiniteDifferences/: test_finite_differences.cc
tests/Newton/: test_newton.cc
tests/Optimizer/: test_cost_functions.hh  test_neldermead.cc  test_newton_scalar.cc  test_newtonraphson.cc  test_scalar_functions.hh
tests/RootFinder/: test_algo748.cc  test_broyden.cc  test_chandrupatla.cc  test_chebyshev.cc  test_greenstadt.cc  test_halley.cc  test_newton.cc  test_newton_scalar.cc  test_newtonraphson.cc  test_scalar_functions.hh  test_varona.cc  test_vector_functions.hh
tests/Rootfind/: test_rootfind.cc
tests/ScalarOptimizer/: test_newton.cc  test_scalar_functions.hh
tests/ScalarRootFinder/: test_algo748.cc  test_chandrupatla.cc  test_chebyshev.cc  test_halley.cc  test_newton.cc  test_scalar_functions.hh  test_varona.cc
tests/TestSet/: test_testset.cc
